--- a/components/backend-tests-go-suvgojte/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-suvgojte/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-suvgojte
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-suvgojte:ef82038439fe687b44b07ad7ad7de1c1d643e7b0@sha256:d361129cde5f400b7cce89a3cdd72529eb43812e7cc471c8f82f1cfc83b41eff
+          name: container-image
